// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cleanProcessor merges args together and completes resolves path 1`] = `
{
  "copy": [
    {
      "dest": "<PROJECT_ROOT>/dist/static-1",
      "src": "<PROJECT_ROOT>/static-1",
    },
    {
      "dest": "<PROJECT_ROOT>/dist/static-2",
      "src": "<PROJECT_ROOT>/static-2",
    },
    {
      "dest": "<PROJECT_ROOT>/dist/static-3",
      "hash": true,
      "src": "<PROJECT_ROOT>/static-3",
    },
  ],
  "del": [
    "first",
    "second",
    "third",
  ],
  "makeDirs": [
    "<PROJECT_ROOT>/dist/first",
    "<PROJECT_ROOT>/dist/second",
    "<PROJECT_ROOT>/dist/third",
  ],
}
`;

exports[`cleanProcessor removes duplicates 1`] = `
{
  "copy": [
    {
      "dest": "<PROJECT_ROOT>/dist/static-1",
      "src": "<PROJECT_ROOT>/static-1",
    },
  ],
  "del": [
    "first",
  ],
  "makeDirs": [
    "<PROJECT_ROOT>/dist/first",
  ],
}
`;
